--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "vuepress": "^1.0.1",
     "vuepress-plugin-baidu-google-analytics": "^1.0.0",
     "vuepress-plugin-flowchart": "^1.4.2"
-  }
+  },
+  "resolutions": {
+    "stylus": "github:stylus/stylus#0.54.8"
+  },
+  "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
 }
